<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ProgressBar
        android:id="@+id/progressbar_main_activity"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminate="true"
        android:max="100"
        android:visibility="invisible"/>

    <LinearLayout
        android:id="@+id/layout_main_activity"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:text="@string/submit_blood_test_results" />

    <EditText
        android:id="@+id/EdtTxt_main_activity_test_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:inputType="text"
        android:background="@drawable/rectangle"
        android:hint="@string/test_name"
        android:layout_marginTop="20dp"
        android:layout_marginLeft ="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd  ="20dp"
        android:paddingLeft ="10dp"
        android:paddingStart="10dp"
        android:paddingRight="10dp"
        android:paddingEnd  ="10dp" />

    <EditText
        android:id="@+id/EdtTxt_main_activity_test_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:inputType="text"
        android:background="@drawable/rectangle"
        android:hint="@string/result"
        android:layout_marginTop="10dp"
        android:layout_marginLeft ="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd  ="20dp"
        android:paddingLeft ="10dp"
        android:paddingStart="10dp"
        android:paddingRight="10dp"
        android:paddingEnd  ="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_main_activity_am_i_ok"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/am_i_ok"
            android:onClick="CheckResult" />

        <Button
            android:id="@+id/btn_main_activity_reset"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:onClick="Reset" />
    </LinearLayout>

    <TextView
        android:id="@+id/TxtVw_main_activity_evaluation_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:textAllCaps="true"
        tools:text="Your evaluation for HDL Cholesterol"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/imgVw_main_activity_evaluation_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        tools:ignore="contentDescription"
        android:background="@drawable/emoji_unknown"
        android:visibility="invisible" />
</LinearLayout>
</RelativeLayout>